Resolves: fdo#30862 move user options page to cui and adapt code

and make initials area and zip code areas wider to address
fdo#30862

This "first/last name" thing is a disaster of course:
http://www.kalzumeus.com/2010/06/17/falsehoods-programmers-believe-about-names/
http://www.w3.org/International/questions/qa-personal-names

Change-Id: Iedb347a533f208056176b5a79b8a56050672a8d1