cui/AllLangResTarget_cui.mk
@@ -86,7 +86,6 @@ $(eval $(call gb_SrsTarget_add_files,cui/res,\
     cui/source/options/optdict.src \
     cui/source/options/optfltr.src \
     cui/source/options/optgdlg.src \
-    cui/source/options/optgenrl.src \
     cui/source/options/opthtml.src \
     cui/source/options/optinet2.src \
     cui/source/options/optjava.src \
