cui/UI_cui.mk
@@ -40,6 +40,7 @@ $(eval $(call gb_UI_add_uifiles,cui,\
 	cui/uiconfig/ui/optmemorypage \
 	cui/uiconfig/ui/optpathspage \
 	cui/uiconfig/ui/optsecuritypage \
+	cui/uiconfig/ui/optuserpage \
 	cui/uiconfig/ui/personalization_tab \
 	cui/uiconfig/ui/pickbulletpage \
 	cui/uiconfig/ui/pickgraphicpage \
